mdapi/objects/Transazione_Shadow__c/fields/Allocabile__c.field-meta.xml
<CustomField>
    <fullName>Allocabile__c</fullName>
    <formula>Transazione__r.CurrentAmount</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Allocabile</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>