mdapi/objects/Transazione_Shadow__c/fields/Allocabile_Static__c.field-meta.xml
<CustomField>
    <fullName>Allocabile_Static__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Allocabile - Static</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>