mdapi/objects/Transazione_Shadow__c/fields/Numero_Allocazioni__c.field-meta.xml
<CustomField>
    <fullName>Numero_Allocazioni__c</fullName>
    <formula>Transazione__r.Total_Allocations__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Numero Allocazioni</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>