mdapi/objects/Transazione_Shadow__c/fields/Numero_Allocazioni_Static__c.field-meta.xml
<CustomField>
    <fullName>Numero_Allocazioni_Static__c</fullName>
    <label>Numero Allocazioni - Static</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>