mdapi/objects/Transazione_Shadow__c/fields/Totale_Allocato_NON_Pagato__c.field-meta.xml
<CustomField>
    <fullName>Totale_Allocato_NON_Pagato__c</fullName>
    <formula>Transazione__r.Totale_Allocato_NON_Pagato__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Totale Allocato NON Pagato</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>