mdapi/objects/Transazione_Shadow__c/fields/Totale_Allocato_Static__c.field-meta.xml
<CustomField>
    <fullName>Totale_Allocato_Static__c</fullName>
    <label>Totale Allocato - Static</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>