mdapi/objects/Transazione_Shadow__c/fields/Totali_Donatore_Anno__c.field-meta.xml
<CustomField>
    <fullName>Totali_Donatore_Anno__c</fullName>
    <label>Totali Donatore Anno</label>
    <referenceTo>Totali_Donatore_Anno__c</referenceTo>
    <relationshipLabel>Transazioni Shadow</relationshipLabel>
    <relationshipName>Transazioni_Shadow</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>