mdapi/objects/Transazione_Shadow__c/fields/Transazione__c.field-meta.xml
<CustomField>
    <fullName>Transazione__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Transazione</label>
    <referenceTo>GiftTransaction</referenceTo>
    <relationshipLabel>Transazioni Shadow</relationshipLabel>
    <relationshipName>Transazioni_Shadow</relationshipName>
    <type>Lookup</type>
</CustomField>